tests/sksl/errors/Ossfuzz31410.dsl.glsl
### Compilation failed:

error: type mismatch: '*' cannot operate on 'float', 'int'

1 error
